@@ -152,10 +152,12 @@ class BaselineJavaVersionIntegrationTest {
         }
 
         @Test
-        void java_21_compilation_fails_targeting_java_17(GradleInvoker gradle, RootProject rootProject) {
+        void java_21_source_feature_fails_targeting_java_17_using_java_21_compiler(
+                GradleInvoker gradle, RootProject rootProject) {
+
             rootProject.buildGradle().append("""
                 javaVersion {
-                    javaCompiler = 17
+                    javaCompiler = 21
                     target = 17
                     runtime = 21
                 }
@@ -165,15 +167,102 @@ class BaselineJavaVersionIntegrationTest {
 
             InvocationResult result = gradle.withArgs("compileJava").buildsWithFailure();
 
-            result.assertThat().output().contains("error: patterns in switch statements are a preview feature");
+            result.assertThat().output().contains("error: patterns in switch statements are not supported");
 
-            result.assertThat().output().contains("Compiler Java Version: 17");
+            result.assertThat().output().contains("Compiler Java Version: 21");
             result.assertThat().output().contains("Compiler Arg: --source=17");
             result.assertThat().output().contains("Compiler Arg: --target=17");
         }
 
         @Test
-        void java_17_compilation_succeeds_targeting_java_17(GradleInvoker gradle, RootProject rootProject) {
+        void java_21_api_usage_fails_targeting_java_17_using_java_21_compiler(
+                GradleInvoker gradle, RootProject rootProject) {
+
+            rootProject.buildGradle().append("""
+                javaVersion {
+                    javaCompiler = 21
+                    target = 17
+                    runtime = 21
+                }
+                """);
+
+            rootProject.mainSourceSet().java().writeClass(JAVA_21_API_USAGE);
+
+            InvocationResult result = gradle.withArgs("compileJava").buildsWithFailure();
+
+            result.assertThat().output().contains("error: cannot find symbol");
+
+            result.assertThat().output().contains("Compiler Java Version: 21");
+            result.assertThat().output().contains("Compiler Arg: --source=17");
+            result.assertThat().output().contains("Compiler Arg: --target=17");
+        }
+
+        @Test
+        void java_21_api_usage_annoyingly_succeeds_targeting_java_17_with_exports_using_a_java_21_compiler(
+                GradleInvoker gradle, RootProject rootProject) {
+
+            // This test merely shows the behaviour that actually happens - this is not a behaviour we actually
+            // want, just something we forced to accept. If you can fix it, you should and instead make this
+            // the opposite test.
+            // We can't use `--release` with `--add-exports`, which means users can use higher versioned APIs
+            // than are available than their target versions, meaning compilation succeeds even when you
+            // would not expect it to.
+
+            rootProject.buildGradle().plugins().add("com.palantir.baseline-module-jvm-args");
+
+            rootProject.buildGradle().append("""
+                javaVersion {
+                    javaCompiler = 21
+                    target = 17
+                    runtime = 21
+                }
+
+                moduleJvmArgs {
+                    exports = ['jdk.compiler/com.sun.tools.javac.util']
+                }
+                """);
+
+            rootProject.mainSourceSet().java().writeClass(JAVA_21_API_USAGE);
+
+            InvocationResult result = gradle.withArgs("compileJava").buildsSuccessfully();
+
+            result.assertThat().output().contains("Compiler Java Version: 21");
+            result.assertThat().output().contains("Compiler Arg: --source=17");
+            result.assertThat().output().contains("Compiler Arg: --target=17");
+            result.assertThat().output().doesNotContain("Compiler Arg: --release=");
+            result.assertThat()
+                    .output()
+                    .contains("Compiler Arg: --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED");
+        }
+
+        @Test
+        void java_21_api_usage_fails_targeting_java_17_without_exports_but_module_jvm_args_plugin_applied_21_compiler(
+                GradleInvoker gradle, RootProject rootProject) {
+
+            rootProject.buildGradle().plugins().add("com.palantir.baseline-module-jvm-args");
+
+            rootProject.buildGradle().append("""
+                javaVersion {
+                    javaCompiler = 21
+                    target = 17
+                    runtime = 21
+                }
+                """);
+
+            rootProject.mainSourceSet().java().writeClass(JAVA_21_API_USAGE);
+
+            InvocationResult result = gradle.withArgs("compileJava").buildsWithFailure();
+
+            result.assertThat().output().contains("Compiler Java Version: 21");
+            result.assertThat().output().contains("Compiler Arg: --release=17");
+
+            result.assertThat().output().doesNotContain("Compiler Arg: --add-exports");
+        }
+
+        @Test
+        void java_17_compilation_succeeds_targeting_java_17_using_java_17_compiler(
+                GradleInvoker gradle, RootProject rootProject) {
+
             rootProject.buildGradle().append("""
                 javaVersion {
                     javaCompiler = 17
